--- a/views/login.hbs
+++ b/views/login.hbs
@@ -51,7 +51,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <div class="container-fluid text-center  ">
+    <div class="container-fluid text-center mt-3 ">
       <div class="row vh-100 align-items-center justify-content-center">
         <div class=" card-color card-login rounded p-3 col-sm-9 col-md-6 col-lg-4">
             <img src="/img/logo-agro-forum-agro-color.png" alt="planta feliz" width="30%"  height="auto" class="img-fluid mb-2">
@@ -100,7 +100,8 @@
               data-bs-toggle="modal" data-bs-target="#exampleModal">
               Primera vez? Registrate acá!
               </button>
-              <a href="/">volver</a>
+              <br>
+              <a href="/" class="link-success">volver</a>
             </form>
             {{# if loggedin}}
           <div class="alert alert-danger" role="alert">
