Cambios y mejoras en front

--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -84,6 +84,12 @@
       </div>
     </nav>
 
+    <script type="text/javascript">
+      function obtnerdatos()
+      {
+      var titulo = document.getElementById('titulo')
+      }
+    </script>
 
     <!-- Container para crear posteos -->
     <div class=" container  rounded justify-content-center colorperfil text-white my-5 py-3" >
@@ -93,7 +99,7 @@
         <div class="d-flex row justify-content-center mb-3 text-dark ">
             <div class="col-4">
                 <div class="form-floating mb-3 ">
-                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                 <input type="text" class="form-control" id="floatingInput titulo"  placeholder="name@example.com">
                  <label for="floatingInput">Titulo del post</label>
                 </div>
             </div>
