--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,7 +69,7 @@
               <li class="nav-item">
               <a  class="nav-link link-light btn btn-outline-white "href="/perfil">
               {{#user}}
-              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="{{img}}" alt="" style="width: 45px; height: 45px;">
+              <img class="img-fluid rounded shadow" src="{{img}}" alt="" style="width: 35px; height: 45px;">
               {{/user}}
               </a>
               </li>
@@ -303,8 +303,8 @@
           <img
             src="/img/logo.jpg"
             alt=""
-            class="rounded-circle"
-            style="width: 100px; height: 100px"
+            class="rounded"
+            style="width: 250px; height: 100px"
           />
         </div>
         <div class="col-5">
