Cambios y mejoras en el diseño

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -119,14 +119,13 @@
     <!-- Seccion de posteos (en proceso) -->
     <div class="container text-center my-5">
       <div class="row row-cols-1 row-cols-md-2 row-cols-sm-2 row-cols-lg-3 g-5">
-        
         <div class="col">
           <div class="card card-color">
             <div class="card-body py-4 px-4">
               <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
-                src="/img/tomate.jpg"
+                src="/img/ejemplo_carrusel_3.jpg"
                 class="card-img-top img-size rounded"
               />
               <p class="card-text fw-lighter my-2">TomatoLover21</p>
@@ -235,10 +234,7 @@
             />
             <div class="carousel-caption d-none d-md-block fs-5">
               <h2>Cosecha imagen de ejemplo</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                aperiam natus perferendis tempora adipisci, molestiae, sunt
-                rerum iste ut minus iure! Et facere perferendis quibusdam, minus
-                itaque quos quod consequuntur!</p>
+              <p>.</p>
             </div>
           </div>
         </div>
@@ -262,7 +258,7 @@
         </button>
       </div>
     </div>
-
+{{!-- 
     <!-- Top posts de Agro Usuarios -->
     <div class="container-fluid agro-top-user">
       <div class="row m-5">
@@ -342,7 +338,8 @@
 
     </div>
 
-    <!-- Footer -->
+ --}}  
+   <!-- Footer -->
     <footer>
       <div class="container">
         <nav class="row">
