--- a/views/posteo.hbs
+++ b/views/posteo.hbs
@@ -115,23 +115,106 @@
         </div>
       </div>
     </nav>
-        {{#posteo}}
-            <div class="container mt-4">
-                
-                    <tr>{{titulo}}</tr>
-                    <tr><img src="{{imagen}}" alt=""></tr>
-                    <tr>{{contenido_planta}}</tr>
-                    <tr>{{categoria}}</tr>
 
-                </table>
-            </div>
-        {{/posteo}}
+
+
+{{!-- POSTEO RESPONSIVE  --}}
+{{#posteo}}
+    <div class="container color-container my-4 py-4 text-white rounded justify-content-center " id="collapseExample">
+      <div class="row d-flex py-2 mx-2 align-items-center justify-content-center">
+        <div class="col-6">
+          <img src="/img/ejemplo_carrusel_3.jpg" alt="" class="d-flex img-fluid rounded justify-content-md-center shadow mb-4">
+        </div>
+        <div class="col-12 color-secondary rounded shadow text-center py-2">
+          <h1>{{titulo}}</h1>
+          <h3 class="my-3 text-sec fw-2">{{categoria}}</h3>
+          {{contenido_planta}}
+        </div>
+      </div>
+     {{/posteo}}
+      <div class="row">
                     {{#if t}}
                     <div class="col-4 mb-3 d-flex justify-content-center">
                     <button type="button" class="btn btn-danger ms-4 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Modificar Post
                     </button> </div>
                     {{/if}}
+      </div>
+    </div>
+
+   <!-- Footer -->
+    <footer>
+      <div class="container">
+        <nav class="row">
+          <ul
+            class="nav justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5"
+          >
+            <li class="nav-item"><a
+                href="#"
+                class="nav-link link-light mx-4"
+              > <i class="fa-users"> Sobre Nosotros</i></a></li>
+            <li class="nav-item"><a
+                href="#"
+                class="nav-link link-light mx-4"
+              >
+              <i class=" fa-instagram"> Instagram</i></a></li>
+            <li class="nav-item">
+              <a
+                href="#"
+                class="nav-link link-light mx-4"
+              > 
+              <i class=" fa-twitter" aria-hidden="true"> Twitter</i>
+              </a>
+            </li>
+            <li class="nav-item"><a
+                href="#"
+                class="nav-link link-light mx-4"
+              ><i class="fa-comments" aria-hidden="true"> FAQs</i>
+              </a>
+            </li>
+          </ul>
+          <p class="text-center mt-2 mb-5 fs-5">© 2022 Los Botanicos SA, Inc</p>
+
+        </nav>
+      </div>
+    </footer>
+  </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!-- Edicion de datos del usuario -->
