--- a/views/posteo.hbs
+++ b/views/posteo.hbs
@@ -69,7 +69,7 @@
               <li class="nav-item">
               <a  class="nav-link link-light btn btn-outline-white "href="/perfil">
               {{#user}}
-              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="{{img}}" alt="" style="width: 45px; height: 45px;">
+              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="/{{img}}" alt="" style="width: 45px; height: 45px;">
               {{/user}}
               </a>
               </li>
@@ -116,7 +116,7 @@
       </div>
     </nav>
         {{#posteo}}
-            <div class="container mt-4">
+            <div class="container mt-4" data-id="{{id_posteo}}">
                 
                     <tr>{{titulo}}</tr>
                     <tr><img src="{{imagen}}" alt=""></tr>
