Rediseño del front-end

--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -19,7 +19,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/style.css">
 </head>
-<body>
+<body class="colorbaseosc">
   <!-- Scripts JS para Bootstrap -->
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -92,7 +92,7 @@
     </script>
 
     <!-- Container para crear posteos -->
-    <div class=" container  rounded justify-content-center color-container text-white my-5 py-3" >
+    <div class=" container  rounded justify-content-center card-color text-dark my-5 py-3" >
         <div class="row m-0 p-0 ">
           <p class="fs-1  text-center fw-2">Crea tu posteo para Agro Forum!</p>
         </div>
@@ -142,17 +142,12 @@
             </div>
         </div>
       </form>
-        <div class="row ">
-          <div class="col-12 d-flex justify-content-center ">
-           <img src="/img/plant-happy.gif" alt="plant-happy" style="width: 75px;" class="">
-          </div>
-        </div>
 
     </div>
 
 
     {{!-- PREVISUALIZACION --}}
-    <div class="container  color-container my-5 text-white rounded justify-content-center " id="collapseExample">
+ {{!--    <div class="container  card-color  my-5 text-dark rounded justify-content-center " id="collapseExample">
      <div class="row ">
       <div class="d-flex justify-content-end col-12 p-3">
         <button type="button" class="btn-close btn-close-dark" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#collapseExample"></button>
@@ -200,7 +195,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> --}}
 
     {{!-- FOOTER --}}
     <footer class="mt-5">
