--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,40 +36,38 @@
 
 
     <!-- Barra de navegacion -->
-    <nav class="navbar-fluid pb-2">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-3 text-left mt-3">
-            <div class="container-fluid">
-              <a class="navbar-brand " href="/">
-                <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid" style="width:50px;">
-                <a href="" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
+    <nav class="navbar-fluid py-3 ">
+      <div class="container ">
+        <div class="row align-items-center ">
+          <div class="col-lg-4 col-md-12 align-self-center p-0 ">
+            <div class="container d-flex flex-row justify-content-md-center justify-content-lg-start justify-content-sm-center justify-content-center alig-items-center ">
+              <a class="navbar-brand" href="/">
+                <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid mb-2" style="width:50px;">
+                <a href="" class="link-light text-decoration-none" style="font-size:30px;">Agro Forum</a> 
               </a>
             </div>
           </div>
-          <div class="col-lg-3 text-center mt-3">
-            <div class="container-fluid">
-              <form class="d-flex" role="search">
+
+          <div class="col-lg-4 my-3">
+            <div class="container">
+              <form class="" role="search">
                 <input
-                  class="form-control border form-control-success text-bg-white me-2"
+                  class="form-control border form-control-success text-bg-white"
                   type="search"
                   placeholder="Buscador"
                   aria-label="Search"
                 />
-                <button
-                  class="link-light btn btn-outline-white"
-                  type="submit"
-                >Buscar</button>
               </form>
             </div>
           </div>
-          <div class="col-lg-6 text-center mt-3" >
-            <ul class="nav justify-content-end fs-5">
+
+          <div class="col-lg-4" >
+            <ul class="nav justify-content-lg-end justify-content-md-center justify-content-sm-center justify-content-center fs-5">
               {{# if res.locals.userFound}}
               <li class="nav-item">
               <a  class="nav-link link-light btn btn-outline-white "href="/perfil">
               {{#user}}
-              <img class="img-fluid rounded shadow" src="{{img}}" alt="" style="width: 35px; height: 45px;">
+              <img class="img-fluid rounded shadow" src="{{img}}" alt="" style="width: 35px; height: 35px;">
               {{/user}}
               </a>
               </li>
@@ -115,18 +113,57 @@
         </div>
       </div>
     </nav>
-    
+
+
+{{!-- PRESENTACION --}}
+<div class="container rounded colorbase">
+<div class="container  py-5 my-5 ">
+  <div class="row align-items-center g-5">
+    <div class="col-lg-6 col-md-12 col-sm-12 align-self-center ">
+      <h1 class="display-4 text-center">Tu lugar especial para compartir tu afición por lo agro.</h1>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12  ">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner rounded " style="height:450px;" >
+    <div class="carousel-item active " >
+      <img src="/img/agroindustria-1jpg.jpg" class="d-block" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/img/ejemplo_carrusel_1.jpg" class="d-block" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/img/ejemplo_carrusel_2.jpg" class="d-block " alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+      {{!-- <img  class="rounded img-fluid"src="/img/agroindustria-1jpg.jpg" alt="" width="700px"> --}}
+    </div>
+  </div>
+</div>
+</div>
+
+
     <!-- Seccion de posteos (en proceso) -->
-    <div class="container text-center my-5">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-sm-2 row-cols-lg-3 g-5">
+    <div class="container card-cont">
+
+      <h1 class="text-center lead fs-1 mb-4">Posteos destacados</h1>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3 gx-4 gy-5 ">
         <div class="col">
-          <div class="card card-color">
-            <div class="card-body py-4 px-4">
+          <div class="card card-color pt-3 pb-5 px-2">
+            <div class="card-body  ">
               <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
                 src="/img/ejemplo_carrusel_3.jpg"
-                class="card-img-top img-size rounded"
+                class="card-img-top img-size"
               />
               <p class="card-text fw-lighter my-2">TomatoLover21</p>
               <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
@@ -135,13 +172,13 @@
         </div>
 
         <div class="col">
-          <div class="card card-color">
-            <div class="card-body py-4 px-4">
+          <div class="card card-color pt-3 pb-5 px-2">
+            <div class="card-body ">
               <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
-                src="/img/tomate.jpg"
-                class="card-img-top img-size rounded"
+                src="/img/ejemplo_carrusel_1.jpg"
+                class="card-img-top img-size"
               />
               <p class="card-text fw-lighter my-2">TomatoLover21</p>
               <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
@@ -149,14 +186,14 @@
           </div>
         </div>
 
-        <div class="col my-   ">
-          <div class="card card-color">
-            <div class="card-body py-4 px-4">
+        <div class="col">
+          <div class="card card-color pt-3 pb-5 px-2">
+            <div class="card-body ">
               <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
                 src="/img/tomate.jpg"
-                class="card-img-top img-size rounded"
+                class="card-img-top img-size"
               />
               <p class="card-text fw-lighter my-2">TomatoLover21</p>
               <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
@@ -167,11 +204,16 @@
     </div>
   </div>
 
+
+
     <!-- Carrusel de noticias acerca de la tematica agro -->
-    <div class="containter-fluid mt-5 mb-5">
+
+
+    <div class="container rounded p-0 card-cont-xl">
+      <h1 class="text-center lead fs-1 mb-4">Noticias Destacadas</h1>
       <div
         id="carouselExampleCaptions"
-        class="carousel slide"
+        class="carousel slide "
         data-bs-ride="false"
       >
         <div class="carousel-indicators">
@@ -197,7 +239,7 @@
           ></button>
         </div>
 
-        <div class="carousel-inner">
+        <div class="carousel-inner rounded">
           <div class="carousel-item active">
             <img
               src="/img/ejemplo_carrusel_1.jpg"
@@ -258,90 +300,43 @@
         </button>
       </div>
     </div>
-{{!-- 
+
+
     <!-- Top posts de Agro Usuarios -->
-    <div class="container-fluid agro-top-user">
-      <div class="row m-5">
+    <div class="container agro-top-user colorbase card-cont-xl p-5 rounded">
+      <div class="row ">
         <div class="col">
-          <h1 class="d-flex">Agro Top's Users de la semana:</h1>
+          <h1 class=" text-center">Agro Top's Users de la semana:</h1>
         </div>
       </div>
-      <div class="row m-5">
-        <div class="col-1 pt-3 pe-3">
-          <img
-            src="/img/logo.jpg"
-            alt=""
-            class="rounded-circle"
-            style="width: 100px; height: 100px"
-          />
+      <div class="row mt-3">
+       <div class="col-lg-4 text-center py-5">
+        <img src="/img/logo.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" >  
+        <h2 class="fw-normal">Leopoldo109</h2>
+        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p><a class="btn btn-success" href="#">Ver perfil »</a></p>
+       </div>
+       <div class="col-lg-4 text-center py-5">
+        <img src="/img/logo.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" >  
+        <h2 class="fw-normal">Leopoldo109</h2>
+        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+        <p><a class="btn btn-success" href="#">Ver perfil »</a></p>
+       </div>
+        <div class="col-lg-4 text-center py-5">
+          <img src="/img/logo.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" >  
+          <h2 class="fw-normal">Leopoldo109</h2>
+          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <p><a class="btn btn-success" href="#">Ver perfil »</a></p>
         </div>
-        <div class="col-5">
-          <h2>Leopoldo109</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-            impedit voluptatum libero eum eos reiciendis incidunt labore
-            architecto qui earum itaque vero blanditiis esse praesentium, magni
-            iusto cumque fuga porro?</p>
-        </div>
-
-        <div class="col-1 pt-3 pe-3">
-          <img
-            src="/img/logo.jpg"
-            alt=""
-            class="rounded-circle"
-            style="width: 100px; height: 100px"
-          />
-        </div>
-        <div class="col-5">
-          <h2>Leopoldo109</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-            impedit voluptatum libero eum eos reiciendis incidunt labore
-            architecto qui earum itaque vero blanditiis esse praesentium, magni
-            iusto cumque fuga porro?</p>
-        </div>
-
       </div>
-
-      <div class="row m-5">
-        <div class="col-1 pt-3 pe-3">
-          <img
-            src="/img/logo.jpg"
-            alt=""
-            class="rounded"
-            style="width: 250px; height: 100px"
-          />
-        </div>
-        <div class="col-5">
-          <h2>Leopoldo109</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-            impedit voluptatum libero eum eos reiciendis incidunt labore
-            architecto qui earum itaque vero blanditiis esse praesentium, magni
-            iusto cumque fuga porro?</p>
-        </div>
-
-        <div class="col-1 pt-3 pe-3">
-          <img
-            src="/img/logo.jpg"
-            alt=""
-            class="rounded-circle"
-            style="width: 100px; height: 100px"
-          />
-        </div>
-        <div class="col-5">
-          <h2>Leopoldo109</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-            impedit voluptatum libero eum eos reiciendis incidunt labore
-            architecto qui earum itaque vero blanditiis esse praesentium, magni
-            iusto cumque fuga porro?</p>
-        </div>
-
-      </div>
-
     </div>
 
- --}}  
+
+
+ 
    <!-- Footer -->
     <footer>
-      <div class="container">
+      <div class="container mt-5 py-5">
         <nav class="row">
           <ul
             class="nav justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5"
