--- a/views/login.hbs
+++ b/views/login.hbs
@@ -42,7 +42,7 @@
 
   </head>
 
-  <body class="login-background-color">
+  <body class="colorbase">
 
   <!-- Scripts JS para Bootstrap -->
   <script
@@ -51,26 +51,24 @@
       crossorigin="anonymous"
     ></script>
 
-    <div class="container-fluid text-center mt-3 ">
+    <div class="container-fluid text-center my-4 text-dark ">
       <div class="row vh-100 align-items-center justify-content-center">
-        <div class=" card-color card-login rounded p-3 col-sm-9 col-md-6 col-lg-4">
+        <div class=" card-color card-login rounded p-5 col-sm-9 col-md-6 col-lg-4">
             <img src="/img/logo-agro-forum-agro-color.png" alt="planta feliz" width="30%"  height="auto" class="img-fluid mb-2">
             <form action="/" method="post">
               <div class="mb-1">
-                <h2 class="mb-3">Bienvenido devuelta!</h2>
+                <h2 class="mb-3">Te damos la bienvenida!</h2>
                 <label for="Email" class="form-label lead">Correo Electronico</label>
-            
                 <div class="row">
                 <div class="col-md-2">
                 </div>
                 <div class="col-md-8">
-                  <input type="email" class="form-control rounded-3 ps-1 mb-1 text-center" name="email" id="Email" aria-describedby="emailHelp">
+                  <input type="email" class="form-control rounded-3 ps-1 mb-3 text-center" name="email" id="Email" aria-describedby="emailHelp">
                 </div>
                 <div class="col-md-2">
                 </div>
-                </div>
-                <div id="emailHelp" class="form-text mb-4 blockquote-footer"><em>No te preocupes, nunca compartiremos tu mail con nadie ;)</em></div>
               </div>
+            </div>
 
               <div class="mb-3 ">
                  <label for="Password" class="form-label lead">Contraseña</label>
