--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -74,8 +74,10 @@
         </div>
       </div>
     </nav>
+
+    {{!-- Container de perfil --}}
     <div class="d-flex container justify-content-center my-5 ">
-      <div class="d-flex row colorperfil rounded text-white">
+      <div class="d-flex row card-color shadow  py-3 rounded text-dark">
         <div class="col-12 align-self-center pt-4 pb-4 ">
           {{#user}}
          <img class="img-fluid rounded mx-auto d-block shadow" src="{{img}}" alt="" style="width: 200px;"> 
