--- a/views/posteos.hbs
+++ b/views/posteos.hbs
@@ -93,17 +93,11 @@
       </div>
 </div>
 
-
-
-
-
-
-
 {{!-- PAGINATION --}}
   <div class="container mb-4">
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
+          <li class="page-item ">
             <a class="page-link"><</a>
           </li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -115,5 +109,31 @@
       </ul>
     </nav>
   </div>
+
+
+    <!-- Footer -->
+  <footer>
+    <div class="container mt-5 py-5">
+      <nav class="row">
+        <ul class="nav justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5">
+          <li class="nav-item"><a href="#" class="nav-link link-light mx-4"> <i class="fa-users"> Sobre Nosotros</i></a>
+          </li>
+          <li class="nav-item"><a href="#" class="nav-link link-light mx-4">
+              <i class=" fa-instagram"> Instagram</i></a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link link-light mx-4">
+              <i class=" fa-twitter" aria-hidden="true"> Twitter</i>
+            </a>
+          </li>
+          <li class="nav-item"><a href="#" class="nav-link link-light mx-4"><i class="fa-comments" aria-hidden="true">
+                FAQs</i>
+            </a>
+          </li>
+        </ul>
+        <p class="text-center mt-2 mb-5 fs-5">© 2022 Los Botanicos SA, Inc</p>
+
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
