--- a/views/posteo.hbs
+++ b/views/posteo.hbs
@@ -119,18 +119,21 @@
 {{!-- seccion de posteo --}}
 
 {{#posteo}}
-    <div class="container card-color my-4 py-4 text-white justify-content-center " id="collapseExample">
+    <div class="container-fluid card-color my-4 py-4 text-white justify-content-center " id="collapseExample">
       <div class="row d-flex py-2 mx-2 align-items-center justify-content-center">
         <div class="col-6">
           <img src="/{{imagen}}" alt="" class="d-flex img-fluid rounded justify-content-md-center shadow mb-4">
         </div>
-        <div class="col-9 color-secondary shadow text-center py-2">
+        {{!-- ARREGLAR EL TEXTO DESCRIPTIVO --}}
+        <div class="col color-secondary shadow text-center py-2">
           <h1 class="fw-1 display-3">{{titulo}}</h1>
           <h3 class="my-3 text-sec fw-3">{{categoria}}</h3>
-          <p>{{contenido_planta}}</p>
+          <p class="text-break"> {{contenido_planta}}</pl>
+          
         </div>
       </div>
      {{/posteo}}
+    </div>
       <div class="row justify-content-center">
                     {{#if t}}
                     <div class="col-4 mb-3 d-flex justify-content-center">
@@ -139,7 +142,9 @@
                     </button> </div>
                     {{/if}}
       </div>
-    </div>
+
+
+
 
    <!-- Footer -->
     <footer>
@@ -173,46 +178,9 @@
             </li>
           </ul>
           <p class="text-center mt-2 mb-5 fs-5">© 2022 Los Botanicos SA, Inc</p>
-
         </nav>
       </div>
     </footer>
-  </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -250,11 +218,11 @@
                 />
             </div>
           <div class="row g-3">
-            <button class="btn btn-success" type="submit">Guardar cambios</button>
+            <button class="btn btn-success" name="id" value="{{id_post}}" type="submit">Guardar cambios</button>
           </div>
           </div>
         {{/posteo}}
         </form>
       </div>
-    </body>
+  </body>
 </html>
