--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
   <title>Agro forum</title>
 </head>
 
-<body>
+<body class="">
 
   <!-- Scripts JS para Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -99,23 +99,15 @@
               <div class="carousel-item active ">
                 <img src="/img/agroindustria-1jpg.jpg" class="d-block" alt="...">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item ">
                 <img src="/img/ejemplo_carrusel_1.jpg" class="d-block" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="/img/ejemplo_carrusel_2.jpg" class="d-block " alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+
+
           </div>
         </div>
       </div>
@@ -261,8 +253,8 @@
   <!-- Footer -->
   <footer>
     <div class="container mt-5 py-5">
-      <nav class="row">
-        <ul class="nav justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5">
+      <nav class="row ">
+        <ul class="nav  justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5">
           <li class="nav-item"><a href="#" class="nav-link link-light mx-4"> <i class="fa-users"> Sobre Nosotros</i></a>
           </li>
           <li class="nav-item"><a href="#" class="nav-link link-light mx-4">
