--- a/views/login.hbs
+++ b/views/login.hbs
@@ -119,8 +119,7 @@
 <!-- Modal Register -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content p-3 mt-2  card-login card-color">
-
+    <div class="modal-content p-3 mt-2  text-dark card-color">
       <div class="modal-header text-center justify-content-center  mb-3">
         <h5 class="modal-title text-center lead fs-4" id="exampleModalLabel">Planta tu primera semilla en Agro Forum !</h5>
       </div>
