--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,13 +19,14 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/style.css">
 </head>
-<body class="colorbaseosc">
+<body class="colorbaseosc  d-flex flex-column h-100">
   <!-- Scripts JS para Bootstrap -->
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+
 
     <!-- Barra de navegacion -->
     <nav class="navbar-fluid pb-2">
@@ -92,13 +93,13 @@
       <form action="/crear" method="post" enctype="multipart/form-data">
         <div class="d-flex row justify-content-center mb-3 text-dark ">
             <div class="col-4">
-                <div class="form-floating mb-3 ">
-                 <input type="text" class="form-control" id="floatingInput" name="titulo" minlength="4" required>
+                <div class="form-floating mb-3 " name="crear">
+                 <input type="text" class="form-control" id="floatingInput, titulo" name="titulo" minlength="4" required>
                  <label for="floatingInput">Titulo del post</label>
                 </div>
             </div>
             <div class="col-4">
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-3" name="crear">
                  <input type="text" class="form-control" id="floatingInput" name="categoria" required>
                  <label for="floatingInput">Tematica principal</label>
                 </div>
@@ -106,8 +107,8 @@
         </div>
         <div class=" d-flex row justify-content-center mb-5 text-dark">
             <div class="col-8">
-                <div class="form-floating">
-                 <textarea class="form-control" id="floatingTextarea2" style="height: 200px" name="descripcion" maxlength="300"  required></textarea>
+                <div class="form-floating" name="crear">
+                 <textarea class="form-control" id="floatingTextarea2" style="height: 200px" name="descripcion" maxlength="1200"  required></textarea>
                  <label for="floatingTextarea2">Descripcion general</label>
                 </div>
             </div>
@@ -129,7 +130,7 @@
         </div>
         <div class="d-flex row justify-content-center pb-3 pt-3">
             <div class="d-flex justify-content-end col-11">
-                {{!-- <input  class="btn btn-success me-2" type="submit" value="Previsualizar" data-bs-toggle="collapse" data-bs-target="#collapseExample"> --}}
+                <input  class="btn btn-success me-2" type="submit" value="Previsualizar" oneclick="obenerdatos()" data-bs-toggle="collapse" data-bs-target="#collapseExample" > 
                 <input class="btn btn-success me-2" type="submit" value="Publicar">
                 <input class="btn btn-danger" type="reset"value="Borrar todo"> 
             </div>
@@ -138,9 +139,25 @@
 
     </div>
 
+    <script>
+      console.log("FUNCIONA Y ANDA");
+
+      function obtenerdatos()
+      {
+        var titulo= document.getElementById('titulo').value;
+        var tematica = document.getElementById('tematica').value;
+        var contenido = document.getElementById('contenido').value;
+
+        document.crear.titulobtenido.value = titulo;
+        document.crear.tematicaobtenido.value = tematica;
+        document.crear.contenidobtenido.value = contenido;
+        
+
+      }
+    </script>
 
     {{!-- PREVISUALIZACION --}}
-    <div class="container  card-color  my-5 text-dark rounded justify-content-center " id="collapseExample">
+    <div class="container collapse card-color  my-5 text-dark rounded justify-content-center " id="collapseExample">
      <div class="row ">
       <div class="d-flex justify-content-end col-12 p-3">
         <button type="button" class="btn-close btn-close-dark" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#collapseExample"></button>
@@ -157,8 +174,8 @@
           <img src="/img/card-image-example-3.jpg" alt="" class="d-flex img-fluid img-size rounded justify-content-md-center my-3">
         </div>
         <div class="col-lg-6 color-secondary rounded py-2">
-          <h1>Título principal</h1>
-          <h3 class="my-3 text-sec fw-2">Temática principal</h3>
+          <h1 name="titulobtenido" id="titulobtenido">Título principal</h1>
+          <h3 class="my-3 text-sec fw-2" name="">Temática principal</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima commodi saepe eos a temporibus omnis quo, eveniet velit vero molestiae animi atque consectetur! Ut nisi doloremque tempora quae voluptate perspiciatis?</p>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima commodi saepe eos a temporibus omnis quo, eveniet velit vero molestiae animi atque consectetur! Ut nisi doloremque tempora quae voluptate perspiciatis?</p>
         </div>
@@ -191,7 +208,7 @@
     </div>
 
     {{!-- FOOTER --}}
-    <footer class="mt-5">
+    <footer class="mt-auto">
       <div class="container">
         <nav class="row">
           <ul
